<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="10"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:background="@drawable/style"
        android:drawableLeft="@drawable/usuario1"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHighlight="@color/vino1"
        android:textColorHint="@color/gris"
        android:textColorLink="@color/vino" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:background="@drawable/style"
        android:drawableLeft="@drawable/contrasena"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHighlight="@color/vino1"
        android:textColorHint="@color/gris"
        android:textColorLink="@color/vino" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Olvido"
        android:textColor="@color/gris"
        android:textColorHint="@color/gris" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:backgroundTint="@color/vino"
        android:text="@string/Ingresar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/Crear"
        android:textColor="@color/vino" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="facebook"
            app:srcCompat="@drawable/facebook" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="instagram"
            app:srcCompat="@drawable/instagram" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="twitter"
            app:srcCompat="@drawable/twitter" />
    </LinearLayout>


</LinearLayout>